# anti-cheat

./: .gitignore  CMakeLists.txt  README.md
agent/: CMakeLists.txt
agent/include/: eval_io.hpp  model_loader.hpp
agent/src/: agent_main.cpp  model_loader.cpp  win_agent.cpp
common/: CMakeList.txt  CMakeLists.txt
common/include/: log.hpp
common/src/: log.cpp
game_harness/: CMakeLists.txt
game_harness/src/: game_main.cpp
models/: feature_order.txt  iso_20251013_223018.joblib  logreg_20251013_223018.joblib  logreg_20251013_224616.joblib  logreg_export.json  logreg_export_20251014_114917.json  logreg_export_20251014_204301.json  logreg_export_20251014_204641.json
notebook/: ai_baseline.ipynb  eval_visuals.ipynb
